corrected links and more readable font color

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ html {
     font-size: 2rem;
 }
 
+.home_desc_pop{
+    font-size: 2rem;
+    color: firebrick;
+}
+
 .home_text {
     text-align: center;
     position: absolute;
